--- a/views/type.twig
+++ b/views/type.twig
@@ -2,7 +2,7 @@
 {% import "macros.html" as macros %}
 {% block content %}
 	<br>
-	<div class="card border-success mb-3">
+	<div class="card border-success mb-3" style="background-color: transparent!important;">
 		<div class="card-header bg-success text-white">
 			<h1 class="m-2">Типы</h1>
 		</div>
