--- a/views/type.twig
+++ b/views/type.twig
@@ -13,7 +13,7 @@
 						<div class="card border-success mb-3 h-100">
 							<div class="card-header">{{type.title|title}}</div>
 							<div class="card-body row mx-auto p-1" style="overflow:hidden;">
-								<a class="ripple" href="/?type={{type.title}}"><img src="{{ type.image_type }}" class=" p-1 img-fluid rounded-circle shadow"/></a>
+								<a class="ripple" href="/?type={{type.id_type}}"><img src="{{ type.image_type }}" class=" p-1 img-fluid rounded-circle shadow"/></a>
 							</div>
 						</div>
 					</div>
