--- a/views/__layout.twig
+++ b/views/__layout.twig
@@ -7,6 +7,8 @@
 		<title>{{ title }}</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+		<link href="style.css" rel="stylesheet" type="text/css">
+		<link href="calendar.css" rel="stylesheet" type="text/css">
 		
 	</head>
 	<body style="background:#d1d6de;">
@@ -32,21 +34,18 @@
 						</li>
 					</ul>
 				</div>
-				<!--<div class="row justify-content-end">
-									<a class="navbar-brand col-auto btn btn-primary" href="/logout">
-										<i class="fas fa-sign-out-alt"></i></a>
-								</div>-->
+
 			</div>
 		</nav>
+
 		<div class="container">
 			<div class="row">
-				<div class="col"> 
-				{% block content %}{% endblock %}
-				
-				</div>
-				
-			</div>
-		</div>
+				<div class="col"> {% block content %}{% endblock %}
+					</div>
+					
 
-	</body>
-</html>
+
+				</div>
+			</div>
+		</body>
+	</html>
